--- a/docs/Base/1.1.AbordagemNaoEspecifica.md
+++ b/docs/Base/1.1.AbordagemNaoEspecifica.md
@@ -1,71 +1,51 @@
-# 1.1. Módulo Projeto Não Orientado a Abordagens Específicas
+# 1.1 Módulo Projeto Não Orientado a Abordagens Específicas
 
-Usando a lista de projetos indicados por grupo para o período letivo vigente (vide final dessas Diretrizes), sendo uma lista de projetos já existentes e implementados, realizar Design Sprint para levantamento dos requisitos de uma possível evolução desse software.
+## Introdução
 
-Focos_1_2_3: Desing Sprint, Técnicas de Elicitação e Artefatos Independentes de Metodologia
+Para a primeira etapa do projeto, decidimos realizar alguns artefatos visando a definição de metodologias de trabalho, uma melhor compreensão do projeto em si e do seu respectivo escopo, a divisão e organização dos grupos de trabalho, e as fraquezas do sistema escolhido. Utilizamos uma variação da metodologia SCRUM para este processo, que será detalhadamente descrita no artefato a seguir, incluindo a descrição completa do processo utilizado e sua modelagem BPMN. Também fizemos uma adaptação da Design Sprint, conforme explicado neste documento.
 
-Entrega Mínima: Design Sprint, evidenciando 1 técnica de elicitação e 1 artefato generalista (ESCOPO: 5W2H; Mapa Mental; Diagrama Causa-Efeito; Rich Picture; Léxico (ou Glossário) ou Planos de Risco, Custo e Tempo).
+### Design Sprint
 
-Apresentação (em sala) explicando passo a passo a Design Sprint realizada, com: (i) rastro claro aos membros participantes (MOSTRAR QUADRO DE PARTICIPAÇÕES & COMMITS); (ii) justificativas & senso crítico sobre o trabalho realizado; (iii) breve apresentação de 1 técnica de elicitação e de 1 artefato elaborado, e (iv) comentários gerais sobre o trabalho em equipe. Tempo da Apresentação: +/- 10min. Recomendação: Apresentar diretamente via Wiki ou GitPages do Projeto. Baixar os conteúdos com antecedência, evitando problemas de internet no momento de exposição nas Dinâmicas de Avaliação.
+O Design Sprint é uma metodologia de trabalho desenvolvida pela Google Ventures (GV) para ajudar equipes a resolver problemas complexos e desenvolver novas ideias rapidamente. Foi criada para estimular a criatividade, colaboração e decisão rápida e eficaz. As cinco etapas fundamentais do Design Sprint são:
 
-A Wiki ou GitPages do Projeto deve conter um tópico dedicado ao Módulo Projeto Não Orientado a Abordagens Específicas, com Design Sprint, 1 técnica de elicitação e 1 artefato generalista, histórico de versões, referências, e demais detalhamentos gerados pela equipe nesse escopo.
+- **Segunda (Unpack):** A equipe define o problema a ser resolvido e estabelece metas claras. Isso inclui identificar os desafios, compreender os usuários e definir os objetivos do sprint.
+  
+- **Terça (Sketch):** Os membros da equipe geram, individualmente, uma variedade de ideias para resolver o problema identificado. Isso pode envolver esboços, fluxogramas ou qualquer outra forma visual de representação das ideias. As ideias são, então, compartilhadas e discutidas em grupo.
+  
+- **Quarta (Decision):** A equipe revisa e vota nas soluções mais promissoras, escolhendo uma que seja viável e capaz de resolver eficazmente o problema. A decisão geralmente considera a viabilidade técnica, impacto no usuário e alinhamento com os objetivos do projeto.
+  
+- **Quinta (Prototype):** É criado um protótipo de baixa fidelidade que representa a solução de forma tangível. Este protótipo permite testes rápidos com usuários para validação e identificação de possíveis melhorias.
+  
+- **Sexta (Interview):** Por fim, o protótipo é testado com usuários reais para coletar feedback sobre a solução proposta. Os testes podem ser realizados por meio de entrevistas, observações ou outras técnicas de pesquisa.
 
-Demais orientações disponíveis nas Diretrizes (vide Moodle).
+## Metodologia
 
-# Projetos - Período
+Para a primeira etapa do projeto, seguimos uma adaptação da Design Sprint para construir os artefatos e solucionar o problema definido pela equipe. Não seguimos o modelo de dias consecutivos exatamente, mas uma série de etapas de desenvolvimento focadas na resolução do problema. As etapas são divididas como segue e também representadas na Modelagem BPMN:
 
-Segue a lista de projetos desse período letivo:
+- **Unpack:** Elaboração de um mapa mental para definir o escopo do projeto e identificar possíveis empecilhos, focando em "o site não atende os padrões GOV".
 
-    • G1 até 13 membros
-    • Projeto G1 - My_Ecommerce, baseado em qualquer site e-commerce para inspiração, exceto: Mercado Livre, RiHappy, Americanas, Magazine Luiza e Amazon.
-    • Exemplo: Dell Brasil, disponível em https://www.dell.com/pt-br 
-    • Não usar o nome do e-commerce real. A ideia é usar o nome My_Ecommerce mesmo, e apenas se basear em um e-commerce conhecido para fins de identificar público-alvo, principais funcionalidades, dentre outros detalhes.
+- **Sketch:** Desenvolvimento de diferentes rich pictures que representam os fluxos idealizados no mapa mental.
 
-    • G2 até 13 membros
-    • Projeto G2 - My_Music, qualquer app de recomendação de música para inspiração.
-    • Exemplo: Spotify, disponível na Play Store.
-    • Não usar o nome do app real. A ideia é usar o nome My_Music mesmo, e apenas se basear em um app de recomendação de música conhecido para fins de identificar público-alvo, principais funcionalidades, dentre outros detalhes.
+- **Decision:** Seleção do melhor rich picture, com foco no problema estabelecido, para desenvolver um storyboard que guiará o desenvolvimento do protótipo.
 
-    • G3 até 13 membros
-    • Projeto G3 - My_Gov, qualquer site do governo para inspiração.
-    • Exemplo: Ministério da Cultura, disponível em https://www.gov.br/cultura/pt-br
-    • Não usar o nome do site real. A ideia é usar o nome My_Gov mesmo, e apenas se basear em um site do governo conhecido para fins de identificar público-alvo, principais funcionalidades, dentre outros detalhes.
+- **Prototype:** Criação do protótipo baseado no fluxo do storyboard.
 
-    • G4 até 13 membros
-    • Projeto G4 - My_Video, qualquer site de vídeo para inspiração.
-    • Exemplo: YouTube, disponível em https://www.youtube.com/ 
-    • Não usar o nome do site real. A ideia é usar o nome My_Video mesmo, e apenas se basear em um site que provê vídeos para fins de identificar público-alvo, principais funcionalidades, dentre outros detalhes.
+- **Interview:** Validação do protótipo com um cliente real por meio de um teste de usabilidade em forma de entrevista.
 
-    • G5 até 13 membros
-    • Projeto G5 - My_AudioPodCast, qualquer site de pod cast (áudios) para inspiração.
-    • Exemplo: Mundo Podcast, disponível em https://mundopodcast.com.br/ 
-    • Não usar o nome do site real. A ideia é usar o nome My_AudioPodCast mesmo, e apenas se basear em um site de podcast conhecido para fins de identificar público-alvo, principais funcionalidades, dentre outros detalhes.
-    • G6 até 13 membros
-    • Projeto G6 - My_LanguageLearning, qualquer site que ensina um idioma para inspiração.
-    • Exemplo: Duolingo, disponível em https://www.duolingo.com/ 
-    • Não usar o nome do site real. A ideia é usar o nome My_LanguageLearning mesmo, e apenas se basear em um site que ensina idiomas para fins de identificar público-alvo, principais funcionalidades, dentre outros detalhes.
+### Justificativa da escolha dos artefatos
 
-    • G7 até 13 membros
-    • Projeto G7 - My_Market, qualquer site de supermercado para inspiração.
-    • Exemplo: Extra, disponível em  https://www.extra.com.br/ 
-    • Não usar o nome do site real. A ideia é usar o nome My_Market mesmo, e apenas se basear em um site de supermercado conhecido para fins de identificar público-alvo, principais funcionalidades, dentre outros detalhes.
+- Mapa Mental
+- Rich Picture
+- Storyboard
 
-    • G8 até 13 membros
-    • Projeto G8 - My_SocialNetwork, qualquer rede social para inspiração.
-    • Exemplo: Instagram, disponível em https://www.instagram.com/ 
-    • Não usar o nome da rede social real. A ideia é usar o nome My_SocialNetwork mesmo, e apenas se basear em uma rede social conhecida para fins de identificar público-alvo, principais funcionalidades, dentre outros detalhes.
+## Conclusão
 
-    • G9 até 13 membros
-    • Projeto G9 - My_Translator, qualquer tradutor online para inspiração.
-    • Exemplo: Linguee, disponível em https://www.linguee.com.br/ 
-    • Não usar o nome do tradutor real. A ideia é usar o nome My_Translator mesmo, e apenas se basear em um tradutor conhecido para fins de identificar público-alvo, principais funcionalidades, dentre outros detalhes.
+## Bibliografia
 
-    • G10 até 13 membros
-    • Projeto G10 - My_Lyrics, qualquer site de letras de músicas para inspiração.
-    • Exemplo: Lyrics, disponível em https://www.lyrics.com/ 
-    • Não usar o nome do site real. A ideia é usar o nome My_Lyrics mesmo, e apenas se basear em um site de letras de músicas para fins de identificar público-alvo, principais funcionalidades, dentre outros detalhes.
-    
-OBS: Caso existam novos matriculados na disciplina, acima dos previstos, novos projetos serão propostos pela professora. Portanto, nesses casos, conversar com a professora na época.
+> GOOGLE VENTURES. The Design Sprint, 2023. Disponível em: <<http://www.gv.com/sprint/>>. Acesso em: 03/04/2024.
 
+## Histórico de Versões
 
-    
+Versão  | Data | Descrição | Autor(es) | Revisor(es)
+-------- | ------ | ------ | ---------- | ----------
+`1.0` | 07/04/2024 | Criação do artefato  | [Gabriel Campello](https://github.com/g16c) | [Rafael Ferreira](https://github.com/RafaelCLG0) e [Arthur Grandão](https://github.com/arthurgrandao)
