--- a/docs/Base/1.1.AbordagemNaoEspecifica.md
+++ b/docs/Base/1.1.AbordagemNaoEspecifica.md
@@ -2,7 +2,10 @@
 
 Usando a lista de projetos indicados por grupo para o período letivo vigente (vide final dessas Diretrizes), sendo uma lista de projetos já existentes e implementados, realizar Design Sprint para levantamento dos requisitos de uma possível evolução desse software.
 
-Focos_1_2_3: Desing Sprint, Técnicas de Elicitação e Artefatos Independentes de Metodologia
+Focos_1_2_3: <br>
+1- [Desing Sprint](/Base/1.5.DesingSprint) <br>
+2- [Técnicas de Elicitação](/Base/1.6.TecnicasElicitacao) <br> 
+3- [Artefatos Independentes de Metodologia](/Base/1.4.ArtefatosIndependentes)
 
 Entrega Mínima: Design Sprint, evidenciando 1 técnica de elicitação e 1 artefato generalista (ESCOPO: 5W2H; Mapa Mental; Diagrama Causa-Efeito; Rich Picture; Léxico (ou Glossário) ou Planos de Risco, Custo e Tempo).
 
@@ -16,54 +19,10 @@ Demais orientações disponíveis nas Diretrizes (vide Moodle).
 
 Segue a lista de projetos desse período letivo:
 
-    • G1 até 13 membros
-    • Projeto G1 - My_Ecommerce, baseado em qualquer site e-commerce para inspiração, exceto: Mercado Livre, RiHappy, Americanas, Magazine Luiza e Amazon.
-    • Exemplo: Dell Brasil, disponível em https://www.dell.com/pt-br 
-    • Não usar o nome do e-commerce real. A ideia é usar o nome My_Ecommerce mesmo, e apenas se basear em um e-commerce conhecido para fins de identificar público-alvo, principais funcionalidades, dentre outros detalhes.
-
-    • G2 até 13 membros
-    • Projeto G2 - My_Music, qualquer app de recomendação de música para inspiração.
-    • Exemplo: Spotify, disponível na Play Store.
-    • Não usar o nome do app real. A ideia é usar o nome My_Music mesmo, e apenas se basear em um app de recomendação de música conhecido para fins de identificar público-alvo, principais funcionalidades, dentre outros detalhes.
-
     • G3 até 13 membros
     • Projeto G3 - My_Gov, qualquer site do governo para inspiração.
     • Exemplo: Ministério da Cultura, disponível em https://www.gov.br/cultura/pt-br
     • Não usar o nome do site real. A ideia é usar o nome My_Gov mesmo, e apenas se basear em um site do governo conhecido para fins de identificar público-alvo, principais funcionalidades, dentre outros detalhes.
-
-    • G4 até 13 membros
-    • Projeto G4 - My_Video, qualquer site de vídeo para inspiração.
-    • Exemplo: YouTube, disponível em https://www.youtube.com/ 
-    • Não usar o nome do site real. A ideia é usar o nome My_Video mesmo, e apenas se basear em um site que provê vídeos para fins de identificar público-alvo, principais funcionalidades, dentre outros detalhes.
-
-    • G5 até 13 membros
-    • Projeto G5 - My_AudioPodCast, qualquer site de pod cast (áudios) para inspiração.
-    • Exemplo: Mundo Podcast, disponível em https://mundopodcast.com.br/ 
-    • Não usar o nome do site real. A ideia é usar o nome My_AudioPodCast mesmo, e apenas se basear em um site de podcast conhecido para fins de identificar público-alvo, principais funcionalidades, dentre outros detalhes.
-    • G6 até 13 membros
-    • Projeto G6 - My_LanguageLearning, qualquer site que ensina um idioma para inspiração.
-    • Exemplo: Duolingo, disponível em https://www.duolingo.com/ 
-    • Não usar o nome do site real. A ideia é usar o nome My_LanguageLearning mesmo, e apenas se basear em um site que ensina idiomas para fins de identificar público-alvo, principais funcionalidades, dentre outros detalhes.
-
-    • G7 até 13 membros
-    • Projeto G7 - My_Market, qualquer site de supermercado para inspiração.
-    • Exemplo: Extra, disponível em  https://www.extra.com.br/ 
-    • Não usar o nome do site real. A ideia é usar o nome My_Market mesmo, e apenas se basear em um site de supermercado conhecido para fins de identificar público-alvo, principais funcionalidades, dentre outros detalhes.
-
-    • G8 até 13 membros
-    • Projeto G8 - My_SocialNetwork, qualquer rede social para inspiração.
-    • Exemplo: Instagram, disponível em https://www.instagram.com/ 
-    • Não usar o nome da rede social real. A ideia é usar o nome My_SocialNetwork mesmo, e apenas se basear em uma rede social conhecida para fins de identificar público-alvo, principais funcionalidades, dentre outros detalhes.
-
-    • G9 até 13 membros
-    • Projeto G9 - My_Translator, qualquer tradutor online para inspiração.
-    • Exemplo: Linguee, disponível em https://www.linguee.com.br/ 
-    • Não usar o nome do tradutor real. A ideia é usar o nome My_Translator mesmo, e apenas se basear em um tradutor conhecido para fins de identificar público-alvo, principais funcionalidades, dentre outros detalhes.
-
-    • G10 até 13 membros
-    • Projeto G10 - My_Lyrics, qualquer site de letras de músicas para inspiração.
-    • Exemplo: Lyrics, disponível em https://www.lyrics.com/ 
-    • Não usar o nome do site real. A ideia é usar o nome My_Lyrics mesmo, e apenas se basear em um site de letras de músicas para fins de identificar público-alvo, principais funcionalidades, dentre outros detalhes.
     
 OBS: Caso existam novos matriculados na disciplina, acima dos previstos, novos projetos serão propostos pela professora. Portanto, nesses casos, conversar com a professora na época.
 
