Ajustando os arquivos no .yml

--- a/docs/Base/1.5.DesingSprint.md
+++ b/docs/Base/1.5.DesingSprint.md
@@ -14,7 +14,7 @@ O Design Sprint é uma metodologia de trabalho desenvolvida pela Google Ventures
   
 - **Quarta (Decision):** A equipe revisa e vota nas soluções mais promissoras, escolhendo uma que seja viável e capaz de resolver eficazmente o problema. A decisão geralmente considera a viabilidade técnica, impacto no usuário e alinhamento com os objetivos do projeto.
   
-- **Quinta (Prototype):** É criado um protótipo de baixa fidelidade que representa a solução de forma tangível. Este protótipo permite testes rápidos com usuários para validação e identificação de possíveis melhorias.
+- **Quinta (Prototype):** É criado um protótipo de alta fidelidade que representa a solução de forma tangível. Este protótipo permite testes rápidos com usuários para validação e identificação de possíveis melhorias.
   
 - **Sexta (Interview):** Por fim, o protótipo é testado com usuários reais para coletar feedback sobre a solução proposta. Os testes podem ser realizados por meio de entrevistas, observações ou outras técnicas de pesquisa.
 
@@ -48,4 +48,4 @@ Para a primeira etapa do projeto, seguimos uma adaptação da Design Sprint para
 
 Versão  | Data | Descrição | Autor(es) | Revisor(es)
 -------- | ------ | ------ | ---------- | ----------
-`1.0` | 07/04/2024 | Criação do artefato  | [Gabriel Campello](https://github.com/g16c) | [Rafael Ferreira](https://github.com/RafaelCLG0) e [Arthur Grandão](https://github.com/arthurgrandao)
+`1.0` | 07/04/2024 | Criação do artefato  | [Yankee](../../Subgrupos/Yankee.md)  | [Papa](../../Subgrupos/Papa.md) 
