att final da branch

--- a/docs/Base/1.5.DesingSprint.md
+++ b/docs/Base/1.5.DesingSprint.md
@@ -34,11 +34,13 @@ Para a primeira etapa do projeto, seguimos uma adaptação da Design Sprint para
 
 ### Justificativa da escolha dos artefatos
 
-- Mapa Mental
-- Rich Picture
-- Storyboard
+- **Mapa Mental:** A implementação de Mapas Mentais no projeto é validada pela sua eficácia em representar graficamente informações complexas, ideias inter-relacionadas e atividades correlatas de maneira clara e estruturada. Esta abordagem aprimora significativamente a assimilação de conhecimento, otimizando processos de planejamento e a eficiência comunicacional.
+- **Rich Picture:** A adoção de Rich Pictures para este projeto é justificada por sua eficiência em elaborar representações visuais detalhadas de contextos complexos, enfatizando elementos cruciais, interações e partes interessadas. Essa metodologia facilita uma análise aprofundada do ambiente projetual, identificando stakeholders primordiais e suas interconexões, demonstrando-se como uma ferramenta versátil e de fácil aplicação em variados tipos de projetos.
+- **Storyboard:** A aplicação de storyboards é valorizada pela sua habilidade em sequenciar visualmente informações, fornecendo continuidade e profundidade à visão geral capturada pelos Rich Pictures. Eles traduzem contextos complexos em narrativas visuais sequenciais, tornando tangíveis os fluxos de processos e as dinâmicas de interação. Essa progressão visual é crucial para o detalhamento das fases do projeto, facilitando tanto o planejamento quanto a comunicação de suas etapas e a interrelação entre os elementos identificados inicialmente nos Rich Pictures.
 
 ## Conclusão
+
+Durante este trabalho, adotamos metodologias ágeis como SCRUM e uma versão adaptada do design sprint visando a resolução de um problema específico: não padronização do site seguindo os padões de sites governamentais. Utilizamos variadas ferramentas e técnicas para entender o problema, gerar soluções, tomar decisões informadas e criar protótipos para testar. Continuaremos aplicando essas abordagens para melhorar a padronização do projeto e permitir o grupo trabaçhar de forma mais concisa ao longo do projeto.
 
 ## Bibliografia
 
