Visao de processo diagramas de sequencia com threads
Co-authored-by: PauloVictorFS <paulovictor.fsousa11@yahoo.com.br>
Co-authored-by: bot-do-jao <joaopedrobsb3@gmail.com>

--- a/docs/ArquiteturaReutilizacao/4.1.PadroesArquiteturais.md
+++ b/docs/ArquiteturaReutilizacao/4.1.PadroesArquiteturais.md
@@ -1,13 +1,45 @@
 # 4.1. Módulo Estilos e Padrões Arquiteturais
 
-Foco_01: Arquitetura de Software
+## Introdução
+Um padrão arquitetural é um conjunto de princípios de design que direcionam a organização de um sistema, facilitando a manutenção, escalabilidade, e desempenho. Entre os diversos estilos arquiteturais disponíveis, o padrão de processo é mais utilizado para modelar e gerenciar a execução de fluxos de trabalho complexos, garantindo que múltiplas tarefas possam ser processadas de maneira eficiente e escalável. (Garlan e Shaw, 1994)
 
-Entrega Mínina:  Especificação de 2 Visões do DAS (ESCOPO: necessariamente a Lógica, e mais uma (Processo; Implementação; Implantação ou Dados)).
+O padrão de processo é particularmente útil em sistemas que exigem uma gestão precisa de transações, paralelismo e resposta em tempo real. Ele promove a separação de responsabilidades e a modularidade, permitindo que diferentes processos ou threads sejam executados simultaneamente, sem a necessidade de esperar que outras operações sejam concluídas, otimizando o uso dos recursos do sistema.
 
-OBS: A Visão de Caso de Uso, por ser uma visão já conhecida por vocês em outras disciplinas, não faz parte do escopo. Mas, pode ser explorada caso queiram.
+## Metodologia
 
-Apresentação (em sala) explicando o Documento de Arquitetura (DAS), com: (i) rastro claro aos membros participantes (MOSTRAR QUADRO DE PARTICIPAÇÕES & COMMITS); (ii) justificativas & senso crítico sobre esse artefato, em especial detalhando particularidades sobre estilos e padrões arquiteturais idealizados para a aplicação; (iii) breve apresentação das visões do DAS no escopo da aplicação, e (iv) comentários gerais sobre o trabalho em equipe. Tempo da Apresentação: +/- 8min. Recomendação: Apresentar diretamente via Wiki ou GitPages do Projeto. Baixar os conteúdos com antecedência, evitando problemas de internet no momento de exposição nas Dinâmicas de Avaliação.
+A visão de Processos foi efetuada pelos integrantes [Paulo Victor Fonseca](https://github.com/PauloVictorFS), [Arthur Marmo Cathalá](https://github.com/artmarmocathala), e [Renann de Oliveira Gomes](https://github.com/NyndoND) do subgrupo [Foxtrot](../Subgrupos/Foxtrot.md). O subgrupo se reuniu em uma chamada de grupo, na plataforma Discord, no dia 15 de agosto, por volta das 11h. Além do Discord, para a criação do diagrama, foi feita a utilização do Lucidchart, e para a escrita do documento, o VSCode com sua extensão Live Share.
 
-A Wiki ou GitPages do Projeto deve conter um tópico dedicado ao Módulo Estilos e Padrões Arquiteturais, com Especificação das Visões do DAS, histórico de versões, referências, e demais detalhamentos gerados pela equipe nesse escopo.
+ O artefato foi feito adaptando o [Diagrama de Sequencia](../Modelagem/ModelagemDinamica/DiagramaDeSequencia.md) e o [Diagrama de Atividade](../Modelagem/ModelagemDinamica/DiagramaDeAtividades.md) colocando foco nas comunicações entre processos e os principais modos de interação, como passagem de mensagens e interrupções (threads). Para isso, é importante  Focar nos processos do sistema, mapeando-os em threads ou processos concorrentes para otimização, identificando  nesses diagramas tarefas que são independentes e podem ser paralelizadas para melhorar o desempenho, e por fim adaptando os diagramas para que cada tarefa ou processo seja mapeado para uma thread.
 
-Demais orientações disponíveis nas Diretrizes (vide Moodle).
+
+## Diagrama de Sequência
+Para cada um dos diagramas de sequência a seguir, foram adicionados threads em tarefas que são independentes e podem ser paralelizadas, de tal forma que todos os processos e threads foram numerados para se ter uma noção da linearidade.
+
+<br> ![alt text](../Assets/PadroesArquiteturais/Cadastro.png) <br>
+
+Nesse primeiro diagrama foi-se criado o processo principal do cadastro desde a função enviarSenhaEmail() até finalizar o processo de cadastro e a conta sendo finalizada com sucesso, e as threads criadas foram uma para criar conexão (CreateConnection()) para não bloquear a interface do usuário, e  outra que enquanto está conectando já irá iniciar o salvamento das informações cadastradas pelo usuario, e por fim outra thread para salvar os  dados pessoais. vale destacar que há um pequeno delay para uma thread não depender de outra em caso por exemplo como o da conexão
+
+
+<br> ![alt text](../Assets/PadroesArquiteturais/Login.png) <br>
+
+Nesse segundo diagrama foi-se criado dois processos principais do login: Um para realizar o login do usuario, e um para recuperar as credenciais do usuario caso ele esqueça alguma informação importante, no primeiro processo há uma thread de criar conexão (CreateConnection()) para não bloquear a interface do usuário e uma de verificar login, enquanto que no segundo processo há um de verificar dados. vale destacar que há um pequeno delay para uma thread não depender de outra em caso por exemplo como o da conexão
+
+<br> ![alt text](../Assets/PadroesArquiteturais/Retrovenda.png) <br>
+
+Nesse ultimo diagrama foi-se criado três processos principais para a retrovenda. Um para iniciar o processo de pesquisa com a para criar conexão (CreateConnection()) para não bloquear a interface do usuário, e enquanto isso há dois processos que podem ocorrer também, um para pesquisar por código, e outro para pesquisar por região. Em ambos os casos há uma thread para a parte de pesquisa, outro para salvar dados, e outra pra solicitar a declaração do imóvel
+
+## Bibliografia
+    
+    SERRANO. MILENE, AULA - ARQUITETURAS & DA - PARTE II, 2024. Diponível em: https://aprender3.unb.br/pluginfile.php/2790287/mod_label/intro/Arquitetura%20e%20Desenho%20de%20Software%20-%20Aula%20Arquitetura%20e%20DAS%20-%20Parte%20II%20-%20Profa.%20Milene.pdf
+
+    Garlan, D., & Shaw, M. (1994). An Introduction to Software Architecture. Pittsburgh: School of Computer Science, Carnegie Mellon University.
+
+<center>    
+
+## <a>*Histórico de Versão*<a>
+
+| Versão |    Data    |                    Descrição                     |                    Autor(es)                     |                   Revisor(es)                    |
+| :----: | :--------: | :----------------------------------------------: | :----------------------------------------------: | :----------------------------------------------: |
+| `1.0`  | 15/08/2024 |               Criação do documento               |      [Foxtrot](../Subgrupos/Foxtrot.md)       | [Whiskey](../Subgrupos/Whiskey.md) |
+
+</center>
