Adicionando diagramas de atividades

--- a/docs/ArquiteturaReutilizacao/4.1.PadroesArquiteturais.md
+++ b/docs/ArquiteturaReutilizacao/4.1.PadroesArquiteturais.md
@@ -28,6 +28,20 @@ Nesse segundo diagrama foi-se criado dois processos principais do login: Um para
 
 Nesse ultimo diagrama foi-se criado três processos principais para a retrovenda. Um para iniciar o processo de pesquisa com a para criar conexão (CreateConnection()) para não bloquear a interface do usuário, e enquanto isso há dois processos que podem ocorrer também, um para pesquisar por código, e outro para pesquisar por região. Em ambos os casos há uma thread para a parte de pesquisa, outro para salvar dados, e outra pra solicitar a declaração do imóvel
 
+
+## Diagrama de Atividades 
+
+No diagrama de Atividades foram adicionadas threads as atividades que dependem que outra atividada seja concluída, a thread principal está representada como thread 1
+
+<br> ![alt text](../Assets/PadroesArquiteturais/Login1.png) <br>
+
+No diagrama de Login é possível ver os processos que são iniciados, de acordo com cada tomada de decisão do fluxo.
+
+<br> ![alt text](../Assets/PadroesArquiteturais/Cadastro1.png) <br>4
+
+Uma coisa parecida ao diagrama de Login acontece, contudo, podemos ver que alguma threads podem ficar em "espera" até que threads secundárias sejam concluídas, para que o sistema possa então possuir as informações necessárias para seguir com o andamento da thread principal (sendo representada aqui como thread 1).
+
+
 ## Bibliografia
     
     SERRANO. MILENE, AULA - ARQUITETURAS & DA - PARTE II, 2024. Diponível em: https://aprender3.unb.br/pluginfile.php/2790287/mod_label/intro/Arquitetura%20e%20Desenho%20de%20Software%20-%20Aula%20Arquitetura%20e%20DAS%20-%20Parte%20II%20-%20Profa.%20Milene.pdf
